--- a/functions/backgrounds.scss
+++ b/functions/backgrounds.scss
@@ -6,7 +6,7 @@
 
 // Função de background simples com posicionamento e tamanho
 @mixin background($image, $position, $size, $repeat){
-    background-image: url("#{$dirImage}#{$image}");
+    background-image: url("#{$image}");
     background-position: $position;
     background-size: $size;
     background-repeat: $repeat;
