--- a/functions/fonts.scss
+++ b/functions/fonts.scss
@@ -1,17 +1,19 @@
-/* Função para carregamento das fontes */
+/*
+*   Created on : 17/05/2017, 22:27:37
+    Author     : Iran
+*/
 
-@mixin carregar-fonte($fonte){
+// Função para carregamento das fontes */
+@mixin load-font($fontname, $font-directory){
     
-    $dirFont: 'fonts/';
+    $dirFont: $font-directory;
     
     @font-face {
         font-family: "#{$fonte}";
-        src: url("#{$dirFont}#{$fonte}.eot?#iefix");
-        src: url("#{$dirFont}#{$fonte}.eot?#iefix") format("eot"),
-             url("#{$dirFont}#{$fonte}.woff") format("woff"),
-             url("#{$dirFont}#{$fonte}.ttf") format("truetype"),
-             url("#{$dirFont}#{$fonte}.svg#c92d9753_c501_44aa_9e48_e1675cd0d5b0") format("svg");
+        src: url("#{$dirFont}#{$fontename}.eot?#iefix");
+        src: url("#{$dirFont}#{$fontename}.eot?#iefix") format("eot"),
+             url("#{$dirFont}#{$fontename}.woff") format("woff"),
+             url("#{$dirFont}#{$fontename}.ttf") format("truetype"),
+             url("#{$dirFont}#{$fontename}.svg") format("svg");
     }
 }
-
-@include carregar-fonte('caecilia-bold');
