--- a/functions/default.scss
+++ b/functions/default.scss
@@ -1,5 +1,7 @@
-@import "backgrounds.scss";
-@import "fonts.scss";
-//@import "functions.scss";
-//@import "misc.less";
-//@import "responsive-repeat.less";
+@import "misc";
+@import "backgrounds";
+@import "functions";
+@import "btn";
+@import "fonts";
+@import "image";
+@import "pseudo-element";
