--- a/functions/btn.scss
+++ b/functions/btn.scss
@@ -132,11 +132,12 @@
     } 
 } 
 
-@mixin btn-quadrado($bg-color, $color){
+@mixin btn-quadrado($bg-color, $color, $text-align){
     
     @include bgcolor($bg-color, $color);
-    border: 1px solid $color; 
-    border-radius: 0px;
+    border: 0px;
+    border-bottom: 2px solid darken($bg-color, 10%);
+    text-align: $text-align;
     
     &:hover{
         background-color: lighten($bg-color, 15%);
