--- a/classes/default.scss
+++ b/classes/default.scss
@@ -1,6 +1,6 @@
 //flutuar
 .flutuar{
-    position: fixed;
+    position: fixed !important;
     z-index: 99999;
     width: 100% !important;
     top: 0px;
